<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">Go4Lunch</string>

    <!-- Images descriptions -->
    <string name="activity_main_nav_drawer_header_string_image_desc">background of nav drawer header</string>

    <string name="fragment_list_item_restaurant_image_description">image of the restaurant</string>
    <string name="fragment_list_item_rate_img_description">star for rating the restaurant</string>
    <string name="fragment_workmates_item_profile_image_string">icon profile of user</string>

    <string name="activity_details_resto_main_picture_content_desc">picture downloaded from google client</string>
    <string name="activity_details_restaurant_content_desc_phone_icon">phone icon</string>
    <string name="activity_details_restaurant_content_desc_rate_icon">rate_icon</string>
    <string name="activity_details_restaurant_content_desc_website_icon">website icon</string>

    <!-- Menu strings -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu_bottom_nav_view_workmates">Workmates</string>
    <string name="menu_bottom_nav_view_list_view">List view</string>
    <string name="menu_bottom_nav_view_map_view">Map view</string>

    <string name="activity_main_menu_drawer_your_lunch_string">Your lunch</string>
    <string name="activity_main_menu_drawer_settings_string">Settings</string>
    <string name="activity_main_menu_drawer_logout_string">Logout</string>

    <string name="nav_drawer_header_string_user_image_profile">user image profile</string>
    <string name="nav_drawer_header_string_email">email</string>
    <string name="nav_drawer_header_string_name">name</string>

    <string name="activity_main_menu_search">search</string>

    <!-- RecyclerView item strings -->
    <string name="fragment_list_item_restaurant_distance_string">distance</string>
    <string name="fragment_list_item_restaurant_name_string">Name</string>
    <string name="fragment_list_item_restaurant_address_string">address</string>
    <string name="fragment_list_item_restaurant_aperture_string">aperture</string>
    <string name="fragment_list_item_number_of_workmates_in_this_restaurant_string" translatable="false">0</string>

    <string name="fragment_workmates_item_workmate_name">name of workmate</string>

    <string name="map_fragment_easy_permission_location_user_request">Allow access to fine location ?</string>

    <!-- Activity Details Restaurant strings -->
    <string name="activity_details_resto_string_call">Call</string>
    <string name="activity_details_resto_string_rate">Rate</string>
    <string name="activity_details_resto_string_website">Website</string>

    <string name="alert_dialog_confirmation_msg">Are you sure that you want to delete your account ?</string>
    <string name="alert_dialog_no">No</string>
    <string name="alert_dialog_yes">Yes</string>
    <string name="toolbar_title_settings">Settings</string>

    <string name="toast_details_activity_no_phone">This place does not have a phone number</string>
    <string name="toast_details_activity_no_website">This place does not have a website</string>
    <string name="toast_frag_no_location">No location detected, have you enabled location in Android settings ?</string>
    <string name="toast_frag_no_restaurant_detected">No restaurants detected near you</string>

    <string name="firebase_no_network_detected">No active network detected</string>
    <string name="firebase_error_login">Error when login</string>
    <string name="firebase_login_cancel">Login canceled</string>
    <string name="firebase_auth_success">Login successful</string>

    <string name="settings_notification_summary">Notify you when it\'s time to eat</string>
    <string name="settings_notification_title">Enable Notifications</string>
    <string name="settings_category_basic">Basics settings</string>
    <string name="settings_pseudo_summary">your pseudo in the app</string>
    <string name="settings_pseudo_title">Pseudo</string>

    <string name="activity_settings_delete_account_btn">delete your account</string>

    <string name="activity_main_toast_no_restaurant_selected">You haven\'t selected a restaurant</string>
    <string name="toast_workmate_note_decided">This workmate doesn\'t have selected a place to eat now</string>

    <!-- View Holder Workmates -->
    <string name="view_holder_is_eating">is eating to</string>
    <string name="view_holder_not_eating">hasn\'t decided yet</string>
    <string name="view_holder_is_joining">is joining !</string>

    <string name="error_unknown_error">An unknown error occurred</string>
    <string name="error_cancel_request">Request canceled</string>

    <!-- Permission request -->
    <string name="permission_request_rationale">This app can\'t work without location access, authorize ?</string>
    <string name="permission_request_yes">Yes</string>
    <string name="permission_request_no">No</string>

    <string name="location_permission_granted">Google location updates granted</string>
    <string name="location_permission_denied">User has denied uses of location updates</string>

    <!-- Notification -->
    <string name="notification_swipe_for_more">swipe for more details</string>
    <string name="notification_big_title">Let\'s go eat !!</string>
    <string name="notification_channel_name">Mid day notification</string>

    <string name="frag_list_item_icon_workmates_voted_for_this_restaurant">A person who has rated the restaurant</string>
</resources>