<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/activity_setting_toolbar_include"
        layout="@layout/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/activity_settings_fragment_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_settings_delete_account_btn">

    </FrameLayout>

    <ImageView
        android:id="@+id/activity_settings_profile_img"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/nav_drawer_header_string_user_image_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_setting_toolbar_include"
        app:srcCompat="@drawable/ic_person_black_48dp" />

    <TextView
        android:id="@+id/activity_settings_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:padding="8dp"
        android:text="@string/nav_drawer_header_string_name"
        app:layout_constraintBottom_toTopOf="@+id/activity_settings_email"
        app:layout_constraintStart_toEndOf="@+id/activity_settings_profile_img"
        app:layout_constraintTop_toTopOf="@+id/activity_settings_profile_img"
        app:layout_constraintVertical_chainStyle="spread" />

    <TextView
        android:id="@+id/activity_settings_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:padding="8dp"
        android:text="@string/nav_drawer_header_string_email"
        app:layout_constraintBottom_toBottomOf="@+id/activity_settings_profile_img"
        app:layout_constraintStart_toEndOf="@+id/activity_settings_profile_img"
        app:layout_constraintTop_toBottomOf="@+id/activity_settings_name" />

    <Button
        android:id="@+id/activity_settings_delete_account_btn"
        style="@style/FirebaseUI.Button.AccountChooser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/activity_settings_delete_account_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_settings_profile_img" />

    <ProgressBar
        android:id="@+id/activity_setting_progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toTopOf="@+id/activity_settings_fragment_container"
        app:layout_constraintEnd_toStartOf="@+id/activity_settings_delete_account_btn"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>