<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="25dp">

    <ProgressBar
        android:id="@+id/activity_details_progress_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:indeterminate="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/activity_details_resto_picture"
        android:layout_width="0dp"
        android:layout_height="203dp"
        android:contentDescription="@string/activity_details_resto_main_picture_content_desc"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bowl_background_unsplash_edited" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/activity_details_resto_floating_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/baseline_add_white_24dp"
        app:elevation="6dp"
        app:layout_constraintBottom_toTopOf="@+id/activity_details_resto_cl_details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/activity_details_resto_cl_details" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/activity_details_resto_cl_details"
        android:layout_width="0dp"
        android:layout_height="104dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_details_resto_picture">

        <TextView
            android:id="@+id/activity_details_resto_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:maxWidth="200dp"
            android:paddingBottom="8dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:text="@string/fragment_list_item_restaurant_name_string"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="@+id/activity_details_resto_rate_1_star"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/activity_details_resto_adress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:padding="8dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:text="@string/fragment_list_item_restaurant_address_string"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_details_resto_name" />

        <ImageView
            android:id="@+id/activity_details_resto_rate_2_stars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/fragment_list_item_rate_img_description"
            app:layout_constraintStart_toEndOf="@+id/activity_details_resto_rate_1_star"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_star_rate_black_18dp" />

        <ImageView
            android:id="@+id/activity_details_resto_rate_3_stars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/fragment_list_item_rate_img_description"
            app:layout_constraintStart_toEndOf="@+id/activity_details_resto_rate_2_stars"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_star_rate_black_18dp" />

        <ImageView
            android:id="@+id/activity_details_resto_rate_1_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/fragment_list_item_rate_img_description"
            app:layout_constraintStart_toEndOf="@+id/activity_details_resto_name"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_star_rate_black_18dp" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/activity_details_restaurant_container_call"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:tag="10"
        app:layout_constraintEnd_toStartOf="@+id/activity_details_restaurant_container_rate"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_details_resto_cl_details">

        <TextView
            android:id="@+id/activity_details_resto_text_view_call"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/activity_details_resto_string_call"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_details_resto_img_view_phone" />

        <ImageView
            android:id="@+id/activity_details_resto_img_view_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/activity_details_restaurant_content_desc_phone_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_phone" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/activity_details_restaurant_container_rate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:tag="20"
        app:layout_constraintEnd_toStartOf="@+id/activity_details_restaurant_container_website"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/activity_details_restaurant_container_call"
        app:layout_constraintTop_toBottomOf="@+id/activity_details_resto_cl_details">

        <TextView
            android:id="@+id/activity_details_resto_text_view_rate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/activity_details_resto_string_rate"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_details_resto_img_view_rate" />

        <ImageView
            android:id="@+id/activity_details_resto_img_view_rate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/activity_details_restaurant_content_desc_rate_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_star_holo" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/activity_details_restaurant_container_website"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:tag="30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/activity_details_restaurant_container_rate"
        app:layout_constraintTop_toBottomOf="@+id/activity_details_resto_cl_details">

        <TextView
            android:id="@+id/activity_details_resto_text_view_website"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/activity_details_resto_string_website"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_details_resto_img_view_website" />

        <ImageView
            android:id="@+id/activity_details_resto_img_view_website"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/activity_details_restaurant_content_desc_website_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_website" />
    </android.support.constraint.ConstraintLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/activity_details_resto_revycler_view_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_details_restaurant_container_rate" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/activity_details_resto_revycler_view_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_details_restaurant_container_rate" />

</android.support.constraint.ConstraintLayout>